--- a/Audit Office/index.html
+++ b/Audit Office/index.html
@@ -35,30 +35,44 @@
 
 
 <div class="boxpainel">
-  <div class="inputs">
+      <div class="inputs">
+        
+        <div class="lgo">
+          <img src="Imagens/img3.jpeg">
+        </div>
 
-  <div class="input-municipio">
-  <input list="municipios" placeholder="MUNICÍPIO">
-  <datalist id="municipios">
-    <option value="São Paulo">
-    <option value="Diadema">
-    <option value="Praia Grande">
-    <option value="Paris">
-    <option value="Maruma">
-  </datalist>
-</div> )
+      <div class="input-municipio">
+      <input list="municipios" placeholder="MUNICÍPIO">
+      <datalist id="municipios">
+        <option value="São Paulo">
+        <option value="Diadema">
+        <option value="Praia Grande">
+        <option value="Paris">
+        <option value="Maruma">
+      </datalist>
 
-<div class="input-setor">
-<input list="setor" placeholder="SETOR">
+      <div class="input-setor">
+    <input list="setor" placeholder="SETOR">
 
-<datalist id="setor">
-  <option value="Despesas Covid">
-  <option value="Compras Internacionais">
-  <option value="Despesas Hospitalares">
-  <option value="Gastos Gerais">
-  <option value="Gastos Campanha Eleitoral">
-</datalist>
-</div>
+    <datalist id="setor">
+      <option value="Despesas Covid">
+      <option value="Compras Internacionais">
+      <option value="Despesas Hospitalares">
+      <option value="Gastos Gerais">
+      <option value="Gastos Campanha Eleitoral">
+    </datalist>
+    </div>
+
+    <div class="buscar">
+      <input class="botao" type="submit" name="buscar" value="Buscar">
+    </div>
+    
+
+
+</div> 
+
+
+
 </div>
 </div>
 
