--- a/Audit Office/login.html
+++ b/Audit Office/login.html
@@ -4,7 +4,7 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href = "login.css">
+    <link rel="stylesheet" href = "css/login.css">
 
     <title>Audit Office</title>
   </head>
