--- a/Audit Office/login.html
+++ b/Audit Office/login.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href = "css/login.css">
+    <link rel="stylesheet" href = "css/normalize.css">
 
     <title>Audit Office</title>
   </head>
